# RL_ROS_Robots

./: README.md  run_dqn_train_a.sh  run_dqn_train_b.sh  run_dqn_train_c.sh  run_exp_bot.sh  run_gazebo_env.sh  run_learn_a_env.sh  run_learn_b_env.sh  run_test_a_env.sh  run_test_b_env.sh  run_test_c_env.sh  run_train_env.sh
explorer_bot/: CMakeLists.txt  package.xml
explorer_bot/launch/: display.launch.py
explorer_bot/urdf/: explorer_robot.urdf  explorer_robot.urdf.xacro
observer_bot/: package.xml
src/explorer_bot/launch/: display.launch.py
src/explorer_bot/urdf/: common_properties.xacro  lidar.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
src/observer_bot/: CMakeLists.txt
src/simulation_environment/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/simulation_environment/launch/: env_gazebo.launch.py  learn_env.launch.py  test_env.launch.py  train_env.launch.py
src/simulation_environment/rviz/: urdf_config.rviz
src/simulation_environment/simulation_environment/: auto_drive_node.py  lidar_node.py  pytorch_dqn.py  test_auto_drive_node.py  train_auto_drive_node.py
src/simulation_environment/src/simulation_environment/: lidar_node.py
src/simulation_environment/worlds/: train_world.world
